<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.SignUp">

            <LinearLayout
                android:layout_width="406dp"
                android:layout_height="719dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:background="#FDFCFC"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="188dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:background="@android:color/background_light"
                    android:contentDescription=""
                    android:src="@mipmap/ic_launcher"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/widget_edittext_dark" />

                <EditText
                    android:id="@+id/email3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/widget_edittext_dark" />

                <EditText
                    android:id="@+id/password3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/widget_edittext_dark" />

                <Button
                    android:id="@+id/sign_up_button2"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sign_in_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@null"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15sp" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>